--- a/English.lproj/Main.storyboard
+++ b/English.lproj/Main.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11129.15" systemVersion="16A239j" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
+        <deployment version="101200" identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11129.15"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -450,13 +451,20 @@
                                     <rect key="frame" x="-30" y="1" width="15" height="601"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
+                                <connections>
+                                    <accessibilityConnection property="title" destination="pRy-dX-jbT" id="yeB-xe-We8"/>
+                                </connections>
                             </scrollView>
-                            <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wky-hE-Nuz">
-                                <rect key="frame" x="518" y="9" width="213" height="20"/>
+                            <slider verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wky-hE-Nuz">
+                                <rect key="frame" x="518" y="9" width="213" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="213" id="P9F-ty-0jX"/>
                                 </constraints>
-                                <sliderCell key="cell" controlSize="small" continuous="YES" alignment="left" maxValue="1" doubleValue="0.5" tickMarkPosition="above" numberOfTickMarks="11" sliderType="linear" id="AYF-uT-jxO"/>
+                                <sliderCell key="cell" controlSize="small" continuous="YES" alignment="left" maxValue="1" doubleValue="0.5" tickMarkPosition="above" numberOfTickMarks="11" sliderType="linear" id="AYF-uT-jxO">
+                                    <connections>
+                                        <accessibilityConnection property="link" destination="wky-hE-Nuz" id="Vho-Ud-zaO"/>
+                                    </connections>
+                                </sliderCell>
                                 <connections>
                                     <action selector="zoomSliderDidChange:" target="SG4-Sa-1FX" id="8Gv-se-oy5"/>
                                 </connections>
